--- a/WeatherProject.API/appsettings.json
+++ b/WeatherProject.API/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WeatherProjectsConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=sulton;Database=WeatherProjectsDB"
+  },
+  "JWT": {
+    "ValidAudience": "LessonUchunToken",
+    "ValidIssuer": "127.0.0.1",
+    "Secret": "skjkbsdkfksdbfkjbsdfkjsdfkbfwewerwerwerwsdbkskfdsbjkdfs",
+    "ExpireDate": "5"
+
   }
 }
