--- a/WeatherProject.API/WeatherProject.API.csproj
+++ b/WeatherProject.API/WeatherProject.API.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\WeatherProject.Infrastructura\WeatherProject.Infrastructura.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\image\" />
+  </ItemGroup>
+
 </Project>
